fix: links to example repo

--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-and-user-pool-domain.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-and-user-pool-domain.mdx
@@ -37,6 +37,10 @@ In order to follow this tutorial, you must use Webiny version **5.15.0** or grea
 
 :::
 
+:::info
+The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/03-cloud-infrastructure/01-adding-user-pool-and-user-pool-domain). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+:::
+
 ## Adding User Pool and User Pool Domain
 
 Let's start by defining a new User Pool and a User Pool Domain within our GraphQL API's cloud infrastructure code.
