--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-client.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-client.mdx
@@ -36,6 +36,10 @@ In order to follow this tutorial, you must use Webiny version **5.15.0** or grea
 
 :::
 
+:::info
+The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/03-cloud-infrastructure/02-adding-user-pool-client). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+:::
+
 ## Adding User Pool Client
 
 With the Amazon Cognito User Pool and User Pool Domain deployed, we're ready to define the last missing cloud infrastructure resource, and that's the User Pool Client. This is what will enable us to access the Hosted UI authentication flow from our React application and interact with Amazon Cognito's HTTP API (more on this soon).
