--- a/docs/tutorials/create-custom-application/security/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/security/getting-started.mdx
@@ -34,6 +34,10 @@ In order to follow this tutorial, you must use Webiny version **5.15.0** or grea
 
 :::
 
+:::info
+The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/02-getting-started). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+:::
+
 ## Authentication Flow with Amazon Cognito's Hosted UI
 
 As mentioned in the previous section, in order to perform authentication in our application, we first need to have an **authentication flow**. In other words, we need to provide a way for users to sign up and sign in into our application.
