--- a/docs/tutorials/create-custom-application/security/react-application/integrating-hosted-ui-authentication-flow.mdx
+++ b/docs/tutorials/create-custom-application/security/react-application/integrating-hosted-ui-authentication-flow.mdx
@@ -42,6 +42,10 @@ In order to follow this tutorial, you must use Webiny version **5.15.0** or grea
 
 :::
 
+:::info
+The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/04-react-application/02-integrating-hosted-ui-authentication-flow). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+:::
+
 ## The Remaining Steps
 
 With the initial setup taken care of, we're now ready to perform the remaining steps of the Hosted UI authentication flow integration and finally see everything in action. In order to do that, we'll need to adjust the existing header bar.
