--- a/docs/tutorials/create-custom-application/security/introduction.mdx
+++ b/docs/tutorials/create-custom-application/security/introduction.mdx
@@ -32,6 +32,10 @@ In order to follow this tutorial, you must use Webiny version **5.15.0** or grea
 
 :::
 
+:::info
+The code that we cover in this section can also be found in our GitHub [examples repository](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/01-introduction). Also, if you'd like to see the complete and final code of the application we're building, check out the [`full-example`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/full-example) folder.
+:::
+
 ## Overview
 
 At the moment, we could certainly say our application is not secure:
