fix: polish page

--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-client.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-client.mdx
@@ -152,7 +152,7 @@ DEPLOYMENTS ? 2 DEPLOYS ?
 yarn webiny deploy pinterest-clone/app --env dev --no-build
 ```
 
-Notice the `--no-build` argument at the end of the command. With it, we've instructed the [`webiny deploy`](#) command to not worry about our React application, and just ensure that the supporting cloud infrastructure resources are deployed. Furthermore, note that this will not only deploy the newly defined User Pool Client, but also other already defined resources - a [CloudFront distribution](#) and an [Amazon S3 bucket](#).
+Notice the `--no-build` argument at the end of the command. With it, we've instructed the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command to not worry about our React application, and just ensure that the supporting cloud infrastructure resources are deployed. Furthermore, note that this will not only deploy the newly defined User Pool Client, but also other already defined resources - a [CloudFront distribution](#) and an [Amazon S3 bucket](#).
 
 
 <CenteredImage
