--- a/docs/tutorials/create-custom-application/security/graphql-api/initial-setup.mdx
+++ b/docs/tutorials/create-custom-application/security/graphql-api/initial-setup.mdx
@@ -40,9 +40,18 @@ The code that we cover in this section can also be found in our GitHub [examples
 
 ## Overview
 
-123
+With the Hosted UI authentication flow successfully integrated into our React application, we're now finally ready to start implementing authentication and authorization checks in our GraphQL API. But, before we do that, we need to perform a couple of initial setup steps.
 
-## Adding the Needed Packages
+First of all, we'll add two new libraries that will make it a bit easier to work with the current user within our GraphQL API code (resolver functions). Once that's in place, we will perform the following:
+
+- perform a minor update to our cloud infrastructure code
+- set up the added packages (plugins)
+- perform a minor but important update to the [`Context`](#) interface
+- add new [`createdBy`](#) field to our main [`Pin`](#) GraphQL type
+
+Let's see how we can achieve all of these.
+
+## 1. Adding the Needed Packages
 
 In order to implement the necessary authentication and authorization checks within our GraphQL API, like in the previous section, let's again start by adding a couple of new packages into the mix.
 
@@ -60,7 +69,7 @@ The following command will add both packages to our React application:
 yarn workspace pinterest-clone-api add @webiny/api-security @webiny/api-security-cognito-authentication
 ```
 
-## Updating Cloud Infrastructure Code
+## 2. Updating Cloud Infrastructure Code
 
 In order to start setting up the newly added packages, we'll first need to update our cloud infrastructure code.
 
@@ -108,7 +117,11 @@ export default () => {
 
 As we'll soon see, in our application code, these will be passed to our GraphQL API handler function, upon configuring the relevant security plugins.
 
-## Setting Up the Packages
+:::note
+In order for the new environment variables to be available in our GraphQL API handler function, we'll need to redeploy it. If you had a watch session already up and running, this should've happened automatically. Otherwise, you'll need to either start a new session via the [`webiny watch`](/docs/how-to-guides/use-watch-command), or simply deploy the change via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command.
+:::
+
+## 3. Setting Up the Packages (Plugins)
 
 Essentially, both [`@webiny/api-security`](https://github.com/webiny/webiny-js/tree/next/packages/api-security) and [`@webiny/api-security-cognito-authentication`](https://github.com/webiny/webiny-js/tree/next/packages/api-security-cognito-authentication) packages are exporting a collection of plugins, which are meant to be registered within our GraphQL API handler function:
 
@@ -180,7 +193,7 @@ In our case, the reason we went with a custom `getIdentity` callback function is
 The [`SecurityIdentity`](#) instance that we return from the `setIdentity` callback function is what we'll be returned to us while performing authentication down the road, for example within our GraphQL resolver functions. More on this in the following section of this tutorial.
 :::
 
-## Updating `Context` Interface
+## 4. Updating `Context` Interface
 
 The following step is not required, but it's certainly recommended because we'll benefit from improved type-safety and easier use.
 
@@ -211,7 +224,7 @@ export interface Context
 
 As we can see, at the top of the file, we've simply imported the `SecurityContext` interface, and then, below, added it to our `Context` interface. Which means that, from now on, every time we interact with the `context` object, we'll be able to safely access all of the additional properties that the newly added security-related plugins defined.
 
-## Adding `createdBy` Field
+## 5. Adding `createdBy` Field
 
 With all of the above steps correctly performed, we should be able to retrieve the signed-in user and perform essential authentication and authorization checks within our GraphQL resolver functions. Which means that, upon creating a new pin (via the [`createPin`](#) mutation), we'll also be able to tie the signed-in user to it.
 
