--- a/docs/release-notes/5.15.0/changelog.mdx
+++ b/docs/release-notes/5.15.0/changelog.mdx
@@ -67,3 +67,9 @@ For File Manager check out  `FileElasticsearchBodyModifierPlugin` and `FileElast
 ## Headless CMS ([#1872](https://github.com/webiny/webiny-js/pull/1872))
 
 The definition of Elasticsearch field now uses `CmsEntryElasticsearchFieldPlugin` class instead of `ElasticsearchFieldPlugin`.
+
+
+## File Manager ([#1912](https://github.com/webiny/webiny-js/pull/1912))
+
+### GraphQL
+Fixed a bug with missing `where` parameter in the `listFiles` query. Also added the `tag_and_in` option to where so users can search for files that contain all given tags.
