feat(release-notes): add info about deprecation of the fields

--- a/docs/release-notes/5.15.0/changelog.mdx
+++ b/docs/release-notes/5.15.0/changelog.mdx
@@ -73,3 +73,5 @@ The definition of Elasticsearch field now uses `CmsEntryElasticsearchFieldPlugin
 
 ### GraphQL
 Fixed a bug with missing `where` parameter in the `listFiles` query. Also added the `tag_and_in` option to where so users can search for files that contain all given tags.
+
+Also note that `types`, `tags`, `ids` and `search` parameters in `listFiles` query are deprecated. Use the `where` parameter instead.
