--- a/docs/tutorials/create-custom-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/introduction.mdx
@@ -98,13 +98,13 @@ In this section, we start working on our GraphQL API, by extending it with the n
 
 Once our GraphQL API is in place, we're ready to start working on our frontend React application. The section itself is also organized into five sections, ensuring we don't rush with any of the steps we need to cover.
 
-#### [Security](#)
+#### Security (coming soon)
 
 In this section, we show how we can secure our application by integrating [Amazon Cognito](https://aws.amazon.com/cognito/).
 
 Apart from providing a way for users to sign up and sign in into the application, we also gain the ability to tie every created pin to a user, which we'll display in the application. Last but certainly not the least, we also get to implement necessary security (authorization) checks on the GraphQL API.
 
-#### [File Upload](#)
+#### File Upload (coming soon)
 
 In today's world, no application is complete without a file upload feature, so that's what we'll cover in this final section of this tutorial. By enabling users to attach an image to their pins, the whole website will become more lively and more pleasant to use.
 
@@ -114,7 +114,7 @@ In order to follow this tutorial, you should have a solid understanding of [Java
 
 Furthermore, on the frontend side, for anything styling-related, we'll use [Sass](https://sass-lang.com/), which is already included in every Webiny project. We'll also use the [Ant Design](https://ant.design/docs/react/introduce) React library to create the majority of the user interface. For both of these, a basic understanding will suffice.
 
-Finally, note that you should have a new Webiny project set up on your machine, version `5.13.0` or greater.
+Finally, note that you should have a new Webiny project set up on your machine, version `5.15.0` or greater.
 
 :::info
 Didn't had the chance to set up Webiny yet? Check out the [Install Webiny](/docs/tutorials/create-custom-application/introduction) tutorial.
