--- a/docs/tutorials/create-custom-application/react-application/homepage.mdx
+++ b/docs/tutorials/create-custom-application/react-application/homepage.mdx
@@ -40,7 +40,7 @@ Like in the previous section, fetching the list of created pins can be easily do
 Luckily, we can achieve this pretty easily with a small React library called [`react-columned`](https://www.npmjs.com/package/react-columned), which we'll need to add to our React application. Once we have that, we can start working on our homepage by adjusting the existing [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/plugins/routes/home.tsx#L25) React component.
 
 :::note
-We already had a quick mention of the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) React component in the [Optional Steps](/docs/tutorials/create-custom-application/react-application/layout#optional-steps) section of the [Layout](/docs/tutorials/create-custom-application/react-application/layout) step.
+We already had a quick mention of the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) React component in the [Optional Steps](/docs/tutorials/create-custom-application/react-application/layout#optional-steps) section, in the [Layout](/docs/tutorials/create-custom-application/react-application/layout) section of this tutorial.
 :::
 
 ## Creating the Homepage
@@ -159,6 +159,24 @@ At the moment, this file already includes all of the necessary imports. No furth
 The [`@webiny/react-router`](https://www.npmjs.com/package/@webiny/react-router) library is a thin wrapper around the popular [React Router](https://www.npmjs.com/package/react-router) and its [`react-router-dom`](https://www.npmjs.com/package/react-router-dom) library, which just adds a couple of minor features to it. For example, via the [`ReactRouterOnLinkPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/react-router/src/types.ts#L4) plugin, it gives developers the ability to execute a piece of code for every link that's rendered on the page.
 :::
 
+## Additional Page Styles
+
+One last thing before we move on. Let's replace the code in the existing [`home.scss`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/04-homepage/pinterest-clone/app/code/src/styles/home.scss) file with the following:
+
+```scss
+// Home page styles.
+.home {
+    img {
+      vertical-align: middle;
+      border-style: none;
+      width: 100%;
+      border-radius: 20px;
+      padding: 5px;
+    }
+}
+```
+
+Not super important, but making this change this will make the pins listed on our homepage look a little bit nicer.
 
 ## Final Result
 
