--- a/docs/tutorials/create-custom-application/react-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/react-application/introduction.mdx
@@ -30,7 +30,7 @@ The code that we cover in this section can also be found in our GitHub [examples
 
 ## Overview
 
-In the previous [Extending GraphQL API](/docs/tutorials/create-custom-application/graphql-api) section, we've extended our GraphQL API with the new `Pin` GraphQL type and a basic set of related CRUD query and mutations operations. Now it's time to start building our frontend React application.
+In the previous [Extending GraphQL API](/docs/tutorials/create-custom-application/graphql-api) section, we've extended our GraphQL API with the new [`Pin`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/01-introduction/pinterest-clone/api/code/graphql/src/plugins/scaffolds/pins/typeDefs.ts#L2) GraphQL type and a basic set of related CRUD query and mutations operations. Now it's time to start building our frontend React application.
 
 Essentially, the application will consist of the following two pages:
 
@@ -51,7 +51,7 @@ Before we start with any kind of coding, let's quickly outline the plan.
 
 ## The Plan
 
-As seen in the [Getting Started](/docs/tutorials/create-custom-application/getting-started) section, the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffold generates a brand new React application inside the [`pinterest-clone/app`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/app) folder, with the actual application code located in the [`pinterest-clone/app/code`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/02-getting-started/pinterest-clone/app/code) folder:
+As seen in the [Getting Started](/docs/tutorials/create-custom-application/getting-started) section, the [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffold generates a brand new React application inside the [`pinterest-clone/app`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/01-introduction/pinterest-clone/app) folder, with the actual application code located in the [`pinterest-clone/app/code`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/04-react-application/01-introduction/pinterest-clone/app/code) folder:
 
 ```bash title="React Application Files and Folders (Some Files Removed for Brevity)"
 pinterest-clone/app
@@ -74,7 +74,7 @@ This is where we'll build our application and we'll build it in the following or
 
 ### 1. Application Layout
 
-By default, the created React application contains its own layout, styles and some components. So, we'll want to make some adaptations here, remove some existing code, and add some new. For example, we'll need to change the global [`Layout`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/01-introduction/pinterest-clone/app/code/src/components/Layout.tsx) component and related CSS styles. We'll also need to set up the mentioned [Ant Design](https://ant.design/docs/react/introduce) React library.
+By default, the created React application contains its own layout, styles and some components. So, we'll want to make some adaptations here, remove some existing code, and add some new. For example, we'll need to change the global [`Layout`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/01-introduction/pinterest-clone/app/code/src/components/Layout.tsx#L14) component and related CSS styles. We'll also need to set up the mentioned [Ant Design](https://ant.design/docs/react/introduce) React library.
 
 ### 2. New Pin Modal Dialog
 
