--- a/docs/tutorials/create-custom-application/react-application/pin-details-page.mdx
+++ b/docs/tutorials/create-custom-application/react-application/pin-details-page.mdx
@@ -43,7 +43,7 @@ For now, since we didn't cover security and file upload functionality yet, we'll
 
 ## Creating the Pin Details Page
 
-Unlike with the **Homepage**, where we already had some code in the already existing [`home.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/routes/home.tsx) file, for the **Pin Details** page, we'll need to create a new [`pinDetails.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx) file. The file will contain the [`PinDetails`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx#L33) React component which we'll export via a new [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/v5.14.0/packages/app/src/plugins/RoutePlugin.tsx#L8) plugin:
+Unlike with the **Homepage**, where we already had some code in the already existing [`home.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/routes/home.tsx) file, for the **Pin Details** page, we'll need to create a new [`pinDetails.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx) file. The file will contain the [`PinDetails`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx#L28) React component which we'll export via a new [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/v5.14.0/packages/app/src/plugins/RoutePlugin.tsx#L8) plugin:
 
 ```tsx title="pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx"
 import React from "react";
@@ -127,13 +127,13 @@ export default new RoutePlugin({
 });
 ```
 
-Once we have that, the ID of the pin can be easily retrieved within our [`PinDetails`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx#L33) React component, via `props.match.params.id`, for example:
+Once we have that, the ID of the pin can be easily retrieved within our [`PinDetails`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx#L28) React component, via `props.match.params.id`, for example:
 
 ```tsx title="pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx"
 const getPinQuery = useQuery(GET_PIN, { variables: { id: props.match.params.id } });
 ```
 
-Finally, in order to preserve type safety, notice how we've defined the [`PinDetails`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx#L33) React component's props with the help of [`RouteChildrenProps`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/react-router/index.d.ts#L80) type:
+Finally, in order to preserve type safety, notice how we've defined the [`PinDetails`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/05-pin-details-page/pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx#L28) React component's props with the help of [`RouteChildrenProps`](https://github.com/DefinitelyTyped/DefinitelyTyped/blob/master/types/react-router/index.d.ts#L80) type:
 
 ```tsx title="pinterest-clone/app/code/src/plugins/routes/pinDetails.tsx"
 type Props = RouteChildrenProps<{ id: string }>;
@@ -212,3 +212,7 @@ Finally, with all of the both React and Sass code in place, if we were to click 
 <CenteredImage src={pinDetailsPage} alt="Pin Details Page" />
 
 If that's the case, then all of the steps were performed correctly. This also means we can move on to the following section of this tutorial, in which we'll talk about securing your application.
+
+:::tip
+The Security section of the Create Custom Application tutorial is coming soon! In the meantime, you can join our [`Slack`](https://www.webiny.com/slack) community. We'd be glad to assist you with any comments, questions, or any other kind of feedback you might have.
+:::
