fix: apply minor polishes

--- a/docs/tutorials/create-custom-application/graphql-api.mdx
+++ b/docs/tutorials/create-custom-application/graphql-api.mdx
@@ -20,7 +20,7 @@ import coverImagePreview from "./graphql-api/cover-image-preview.png";
 
 :::info Can I use this?
 
-In order to follow this tutorial, you must use Webiny version **5.15.0** or greater.
+In order to follow this tutorial, you must use Webiny version **5.14.0** or greater.
 
 :::
 
@@ -110,7 +110,7 @@ For more information on how to use it, revisit the [Using the Watch Command](/do
 
 Let's say we wanted to quickly test all of the newly created GraphQL query and mutation operations. The easiest way to do that would be to use a GraphQL client, like for example the [GraphQL Playground](https://www.electronjs.org/apps/graphql-playground). With it, we should be able to run the following `CreatePin` mutation:
 
-```graphql
+```graphql title="GraphQL Mutation"
 mutation CreatePin($data: PinCreateInput!) {
   pins {
     createPin(data: $data) {
@@ -118,6 +118,15 @@ mutation CreatePin($data: PinCreateInput!) {
       title
       description
     }
+  }
+}
+```
+
+```json title="GraphQL Mutation Variables"
+{
+  "data": {
+    "title": "A New Pin",
+    "description": "This is a new pin."
   }
 }
 ```
@@ -233,6 +242,29 @@ With the [`webiny watch`](/docs/how-to-guides/use-watch-command/) command up and
 :::
 
 If everything was done correctly, we should be able to see the newly added field via our GraphQL client and use it upon performing different queries and mutations. In the following example, we're again running the same `CreatePin` mutation, although this time we're also including the `coverImage` field:
+
+```graphql title="GraphQL Mutation"
+mutation CreatePin($data: PinCreateInput!) {
+  pins {
+    createPin(data: $data) {
+      id
+      title
+      description
+      coverImage
+    }
+  }
+}
+```
+
+```json title="GraphQL Mutation Variables"
+{
+  "data": {
+    "title": "A New Pin",
+    "description": "This is a new pin.",
+    "coverImage": "https://www.webiny.com/img/white-square-icon.svg"
+  }
+}
+```
 
 <CenteredImage alt={'"CreatePin Mutation" Test'} src={coverImagePreview} />
 
