--- a/docs/tutorials/create-custom-application/react-application/layout.mdx
+++ b/docs/tutorials/create-custom-application/react-application/layout.mdx
@@ -19,7 +19,7 @@ import endResult from "./layout/end-result.png";
 
 :::info Can I use this?
 
-In order to follow this tutorial, you must use Webiny version **5.15.0** or greater.
+In order to follow this tutorial, you must use Webiny version **5.14.0** or greater.
 
 :::
 
@@ -164,9 +164,9 @@ main {
 
 With this final step, we should have our application layout in place, and we should be ready to continue with the next step: building the **New Pin** modal dialog.
 
-## Optional Steps
+## Cleaning Up the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) React Component
 
-An optional step that we could take here is cleaning up the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) component, located in the [`pinterest-clone/app/code/src/plugins/routes/home.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx) file, and removing the [`UsefulLink`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home/UsefulLink.tsx#L10) and [`UsefulLinks`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home/UsefulLinks.tsx#L9) components, located in the [`pinterest-clone/app/code/src/plugins/routes/home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home) folder.
+The final step that we need take here is cleaning up the [`Home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx#L7) component, located in the [`pinterest-clone/app/code/src/plugins/routes/home.tsx`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/02-layout/pinterest-clone/app/code/src/plugins/routes/home.tsx) file, and removing the [`UsefulLink`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/01-introduction/pinterest-clone/app/code/src/plugins/routes/home/UsefulLink.tsx#L10) and [`UsefulLinks`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/01-introduction/pinterest-clone/app/code/src/plugins/routes/home/UsefulLinks.tsx#L9) components, located in the [`pinterest-clone/app/code/src/plugins/routes/home`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/04-react-application/01-introduction/pinterest-clone/app/code/src/plugins/routes/home) folder.
 
 All of these files were created during the scaffolding process, and basically they are irrelevant for our application. Alternatively, you could also move these files into a separate backup folder of your choice, possibly for future reference.
 
